style: Update button background color and text color in cart component for better visibility fix: Correct sorting log messages in categories component style: Change active label color to black in categories component

--- a/src/app/pages/cart/cart.component.scss
+++ b/src/app/pages/cart/cart.component.scss
@@ -567,7 +567,7 @@ label {
         justify-content: flex-end;
         button {
             width: 220px;
-            background: $theme-color;
+            background: black;
             color: white;
             font-family: 'semi-bold';
             text-transform: capitalize;
